z-index map fix

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -371,6 +371,8 @@ p {
 }
 
 .map-content {
+  position: relative;
+  z-index: 1;
   flex: 1;
   display: flex;
   flex-direction: column;
